k8s/deployment-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipment-canary
  labels:
    app: shipment
    version: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipment
      version: canary
  template:
    metadata:
      labels:
        app: shipment
        version: canary
    spec:
      containers:
        - name: shipment-api
          image: 430695042838.dkr.ecr.us-east-2.amazonaws.com/shipment-api:canary
          ports:
            - containerPort: 10000
          livenessProbe:
            httpGet:
              path: /health
              port: 10000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 10000
            initialDelaySeconds: 5
            periodSeconds: 5
