k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipment-service
spec:
  selector:
    app: shipment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 10000
  type: ClusterIP
